--- a/main.html
+++ b/main.html
@@ -8,6 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h2>What is the capital of India?</h2>
+	<input type="radio" name="City" Value="New Delhi">New Delhi</input><br>	
+	<input type="radio" name="City" Value="Mumbai">Mumbai</input>
+	<blockquote id="qut">New Delhi is the capital of India and an administrative district of NCT Delhi.</blockquote>
     <script type="text/javascript" src="./script.js">
 </script>
 
