--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 	<h2>What is the capital of India?</h2>
 	<input type="radio" name="City" Value="New Delhi">New Delhi</input><br>	
 	<input type="radio" name="City" Value="Mumbai">Mumbai</input>
-	<blockquote id="qut">New Delhi is the capital of India and an administrative district of NCT Delhi.</blockquote>
+	<blockquote id="qut" cite="https://en.wikipedia.org/wiki/New_Delhi">New Delhi is the capital of India and an administrative district of NCT Delhi.</blockquote>
     <script type="text/javascript" src="./script.js">
 </script>
 
